[gd_scene load_steps=2 format=3 uid="uid://qvldivnrjiwb"]

[ext_resource type="Script" path="res://HealthBar.gd" id="1_l1vyx"]

[node name="HealthBar" type="Node2D"]
script = ExtResource("1_l1vyx")

[node name="HeartContainer" type="HBoxContainer" parent="."]
layout_direction = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8
alignment = 1

[node name="ActiveTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="ActiveTimer" to="." method="_on_active_timer_timeout"]
